--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -373,9 +373,8 @@ h2{
 .element_2{
 	padding-top: 151px;
 	padding-bottom: 17px;
-	// height: 63px;
-		img{
-			// height: 22px;
+	img{
+			height: 22px;
 		}
 }
 .footer_list{
