--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -192,6 +192,7 @@ h2{
 				left: 0;
 				position: absolute;
 			}
+
 }
 .content_data{
 	top: 142px;
@@ -289,6 +290,12 @@ h2{
 .last_article{
 	margin-top: 69px;
 }
+// .content_articles:hover{
+
+// 		transform: scale(1.1);
+// 		transition: 2s ease-out;
+
+// }
 .big_img{
 	margin-left: 48px;
 	top: 323px;
