--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,13 +32,20 @@ body{
 	height: 735px;
 	background: url(/assets/img/bg.jpg) top no-repeat ;
 	// background-size: cover;
+	@media screen and (max-width: 768px){
+		height: 700px;
+	}
 }
 header{
 	height: 80px;
 	border-bottom:#3b3a3a solid 1px;
+	@media screen and (max-width: 576px){
+ height: initial;
+	}
 }
 .burger{
 	padding-top: 28px;
+	@media screen and (max-width: 576px){}
 	}
 a, a:hover {
 	text-decoration: none;
@@ -48,7 +55,7 @@ a, a:hover {
 }
 .logo_constr{
 	padding-top: 22px;
-	height: 38px;;
+	height: 38px;
 }
 .sign_in{
 	color:#ffffff;
@@ -57,6 +64,10 @@ a, a:hover {
 	align-items:center;
 	font-family: AcuminPro_Bold;
 	font-size: 13px;
+	@media screen and (max-width: 576px){
+		justify-content:center;
+		padding: 20px;
+	}
 		span{
 		margin-right: 10px;
 		padding-top: 31px;
@@ -132,6 +143,9 @@ nav {
 			border-radius: 20px;
 			color: #ffffff;
 			margin-right: 20px;
+			@media screen and (max-width: 768px){
+				margin-right: 5px;
+			}
 		}
 		:last-child{
 			margin-right: 0;
@@ -167,14 +181,22 @@ nav {
 		letter-spacing: 0.27px;
 		color:#656265;
 		margin-right: 20px;
+		@media screen and (max-width: 768px){
+			margin-right: 5px;
 		}
+		}
+
 }
 .element{
 	padding-top: 150px;
 	height: 281px;
-			img{
-				height: 22px;
-			}
+		@media screen and (max-width: 768px){
+		padding-top: 130px;
+		height: 100px;
+	}
+		img{
+			height: 22px;
+		}
 }
 h3{
 font-family: Butler_Bold;
@@ -338,6 +360,16 @@ h2{
 .subscribe_news{
 	background-color: #121211;
 	height: 153px;
+	text-align: end;
+	@media screen and (max-width: 768px){
+		height: 300px;
+	}
+	@media screen and (max-width: 992px){
+		text-align: center;
+padding-top: 25px;
+
+	}
+
 	.subscribe_to_news{
 		font-family: AcuminProCondensed_Bold;
 		font-size: 47px;
@@ -345,23 +377,37 @@ h2{
 		margin-left: -5px;
 		display: inline;
 		line-height: 153px;
-	}
-	.write_email {
-			height: 40px;
-			width: 194px;
-			border:1px solid #343230;
-			border-radius: 20px;
-			float: left;
-			margin-right: 17px;
-			margin-top: 53px;
-			a{
-				padding-left: 20px;
-				color:#343230;
-				font-family: AcuminProCondensed_Bold;
-				font-size: 13px;
-			line-height: 40px;
 
-			}
+		@media screen and (max-width: 992px){
+			line-height: initial;
+
+		}
+		// float: left;
+	}
+	.subscribe_wrapper{
+     margin-left: 100px;
+		.write_email {
+				height: 40px;
+				width: 194px;
+				border:1px solid #343230;
+				border-radius: 20px;
+				text-align: left;
+				float: left;
+				margin-right: 17px;
+				@media screen and (max-width: 992px){
+
+			margin-top: 15px;
+
+				}
+
+				a{
+					padding-left: 20px;
+					color:#343230;
+					font-family: AcuminProCondensed_Bold;
+					font-size: 13px;
+					line-height: 40px;
+				}
+		}
 	}
 	.subscribe_btn{
 			height: 40px;
@@ -370,6 +416,9 @@ h2{
 			border-radius: 20px;
 			text-align: center;
 			margin-top: 53px;
+			@media screen and (max-width: 992px){
+
+			}
 			a{
 				font-family: AcuminProCondensed_Bold;
 				font-size: 13px;
@@ -384,10 +433,23 @@ h2{
 			height: 22px;
 		}
 }
+.entrant{
+	@media screen and (max-width: 1200px){
+	margin-left: -10px!important;
+	}
+}
 .footer_list{
 	padding-top: 164px;
+	@media screen and (max-width: 992px){
+		text-align: center;
+		justify-content: center;
+///выровнять социалки
+		}
 	.triger{
 		padding-top: 0px;
+		@media screen and (max-width: 992px){
+			text-align: center;
+			}
 	}
 				ul{
 					list-style: none;
