--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,10 +29,16 @@ body {
   width: 100%;
   height: 735px;
   background: url(/assets/img/bg.jpg) top no-repeat; }
+  @media screen and (max-width: 768px) {
+    .top_block {
+      height: 700px; } }
 
 header {
   height: 80px;
   border-bottom: #3b3a3a solid 1px; }
+  @media screen and (max-width: 576px) {
+    header {
+      height: initial; } }
 
 .burger {
   padding-top: 28px; }
@@ -60,6 +66,12 @@ a, a:hover {
   align-items: center;
   font-family: AcuminPro_Bold;
   font-size: 13px; }
+  @media screen and (max-width: 576px) {
+    .sign_in {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      padding: 20px; } }
   .sign_in span {
     margin-right: 10px;
     padding-top: 31px; }
@@ -125,6 +137,9 @@ nav {
     border-radius: 20px;
     color: #ffffff;
     margin-right: 20px; }
+    @media screen and (max-width: 768px) {
+      .triger a {
+        margin-right: 5px; } }
   .triger :last-child {
     margin-right: 0; }
   .triger .triger_social {
@@ -154,10 +169,17 @@ nav {
     letter-spacing: 0.27px;
     color: #656265;
     margin-right: 20px; }
+    @media screen and (max-width: 768px) {
+      .triger span {
+        margin-right: 5px; } }
 
 .element {
   padding-top: 150px;
   height: 281px; }
+  @media screen and (max-width: 768px) {
+    .element {
+      padding-top: 130px;
+      height: 100px; } }
   .element img {
     height: 22px; }
 
@@ -300,7 +322,15 @@ h2 {
 
 .subscribe_news {
   background-color: #121211;
-  height: 153px; }
+  height: 153px;
+  text-align: end; }
+  @media screen and (max-width: 768px) {
+    .subscribe_news {
+      height: 300px; } }
+  @media screen and (max-width: 992px) {
+    .subscribe_news {
+      text-align: center;
+      padding-top: 25px; } }
   .subscribe_news .subscribe_to_news {
     font-family: AcuminProCondensed_Bold;
     font-size: 47px;
@@ -308,20 +338,28 @@ h2 {
     margin-left: -5px;
     display: inline;
     line-height: 153px; }
-  .subscribe_news .write_email {
-    height: 40px;
-    width: 194px;
-    border: 1px solid #343230;
-    border-radius: 20px;
-    float: left;
-    margin-right: 17px;
-    margin-top: 53px; }
-    .subscribe_news .write_email a {
-      padding-left: 20px;
-      color: #343230;
-      font-family: AcuminProCondensed_Bold;
-      font-size: 13px;
-      line-height: 40px; }
+    @media screen and (max-width: 992px) {
+      .subscribe_news .subscribe_to_news {
+        line-height: initial; } }
+  .subscribe_news .subscribe_wrapper {
+    margin-left: 100px; }
+    .subscribe_news .subscribe_wrapper .write_email {
+      height: 40px;
+      width: 194px;
+      border: 1px solid #343230;
+      border-radius: 20px;
+      text-align: left;
+      float: left;
+      margin-right: 17px; }
+      @media screen and (max-width: 992px) {
+        .subscribe_news .subscribe_wrapper .write_email {
+          margin-top: 15px; } }
+      .subscribe_news .subscribe_wrapper .write_email a {
+        padding-left: 20px;
+        color: #343230;
+        font-family: AcuminProCondensed_Bold;
+        font-size: 13px;
+        line-height: 40px; }
   .subscribe_news .subscribe_btn {
     height: 40px;
     width: 115px;
@@ -340,10 +378,23 @@ h2 {
   .element_2 img {
     height: 22px; }
 
+@media screen and (max-width: 1200px) {
+  .entrant {
+    margin-left: -10px !important; } }
+
 .footer_list {
   padding-top: 164px; }
+  @media screen and (max-width: 992px) {
+    .footer_list {
+      text-align: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
   .footer_list .triger {
     padding-top: 0px; }
+    @media screen and (max-width: 992px) {
+      .footer_list .triger {
+        text-align: center; } }
   .footer_list ul {
     list-style: none;
     -webkit-padding-start: 0px;
