--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -1044,13 +1044,14 @@ z-index: 999;
     height: 85px;
 }
 .preloader .one {
-    width: 160px;
-    height: 150px;
+    width: 70px;
+    height: 95px;
     position: absolute;
-    left: -48px;
+    left: -3px;
     z-index: 2;
-    top: -10px;
-    background: url("../img/prelogo3.png")
+    top: -3px;
+		background: url("../img/logo_guardiya.png") no-repeat;
+		background-size: contain;
 }
 .preloader p {
     position: absolute;
@@ -1058,10 +1059,10 @@ z-index: 999;
     text-align: center;
     font-size: 10px;
     font-style: italic;
-    bottom: -8px;
-    color: #363636;
+    bottom: -51px;
+    color: #ffffff;
     text-transform: uppercase;
-    left: 0;
+    left: 3px;
     padding: 0;
     margin: 0;
     z-index: 3;
@@ -1069,14 +1070,14 @@ z-index: 999;
 }
 .preloader .double_bounce1,
 .preloader .double_bounce2 {
-  width: 140px;
-  height: 140px;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
   background-color: #fff;
   opacity: 0.6;
   position: absolute;
-  top: -29px;
-  left: -38px;
+  top: -38px;
+  left: -48px;
   -webkit-animation: bounce 2s infinite ease-in-out;
   animation: bounce 2s infinite ease-in-out;
 }
@@ -1101,7 +1102,7 @@ z-index: 999;
 @-webkit-keyframes bounce {
   0%,
   100% {
-    -webkit-transform: scale(0.3);
+    -webkit-transform: scale(0.4);
   }
   50% {
     -webkit-transform: scale(1);
@@ -1110,8 +1111,8 @@ z-index: 999;
 @keyframes bounce {
   0%,
   100% {
-    transform: scale(0.3);
-    -webkit-transform: scale(0.3);
+    transform: scale(0.4);
+    -webkit-transform: scale(0.4);
   }
   50% {
     transform: scale(1);
