--- a/gvardiya/assets/css/fonts.scss
+++ b/gvardiya/assets/css/fonts.scss
@@ -25,6 +25,20 @@
 
 }
 
+@font-face {
+	font-family: 'playregular';
+	src: url('fonts/play-regular.eot');
+	src: url('fonts/play-regulard41d.eot?#iefix') format('embedded-opentype'),
+			 url('fonts/play-regular.woff') format('woff'),
+			 url('fonts/play-regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+
+}
+
+
+
+
 
 
 
