--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -1052,6 +1052,7 @@ z-index: 999;
     top: -3px;
 		background: url("../img/logo_guardiya.png") no-repeat;
 		background-size: contain;
+		opacity: 0.8;
 }
 .preloader p {
     position: absolute;
