--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -16,7 +16,11 @@ html {
 html,
 body {
   width: 100%;
-  height: 100%;
+	height: 100%;
+	overflow: visible;
+	@media screen and (max-width: 680px){
+		overflow: hidden;
+	}
 }
 .top-block {
   top: 10px;
