--- a/slipper/scss/style.css
+++ b/slipper/scss/style.css
@@ -1892,7 +1892,8 @@ section {
     @media screen and (max-width: 640px) {
 
       .eighth-section footer {
-        height: 319px; } }
+				height: 390px;
+				margin-bottom: 25px;} }
     .eighth-section footer .left-column {
       width: 35%;
       height: 10vh;
@@ -1903,12 +1904,14 @@ section {
       margin: auto 0px auto 0px; }
       @media screen and (max-width: 640px) {
         .eighth-section footer .left-column {
+					border-right: 1px solid #FFFFFF;
           width: 60%;
           -webkit-box-orient: vertical;
           -webkit-box-direction: normal;
               -ms-flex-direction: column;
                   flex-direction: column;
-          height: auto; } }
+					height: auto;
+				margin-left: 30px;} }
       .eighth-section footer .left-column .small {
         width: 50%;
         height: 10vh;
@@ -1932,7 +1935,7 @@ section {
           top: 10%;
           -webkit-transform: translateY(-10%);
                   transform: translateY(-10%); }
-          @media screen and (max-width: 600px) {
+          @media screen and (max-width: 640px) {
             .eighth-section footer .left-column .small .logo-footer-anc {
               left: 0; } }
           .eighth-section footer .left-column .small .logo-footer-anc img {
@@ -1943,7 +1946,11 @@ section {
           position: absolute;
           right: -88px;
           text-align: left;
-          top: 50px; }
+					top: 50px; }
+					@media screen and (max-width: 640px) {
+						.eighth-section footer .left-column .small a {
+              left: 0;}
+					}
           @media screen and (max-width: 600px) {
             .eighth-section footer .left-column .small a {
               left: 0;
@@ -2012,7 +2019,11 @@ section {
           margin-left: 20px; }
       @media screen and (max-width: 640px) {
         .eighth-section footer .right-column {
-          margin-top: 100px; } }
+					/* margin-top: 100px; */
+					position: absolute;
+					top: 195px;
+					left: 18px;
+				 } }
       .bluephone {
         margin-top: 30px;
         font-size: 16px;
