--- a/slipper/scss/style.css
+++ b/slipper/scss/style.css
@@ -2011,7 +2011,10 @@ section {
                 justify-content: center;
         -webkit-box-align: center;
             -ms-flex-align: center;
-                align-items: center; }
+								align-items: center; }
+				.eighth-section footer .right-column .row .icon-right {
+					margin-top: 3px;
+				}
         .eighth-section footer .right-column .row:nth-child(2) {
           padding-left: 7px; }
         .eighth-section footer .right-column .row p {
