--- a/slipper/scss/style.css
+++ b/slipper/scss/style.css
@@ -207,11 +207,7 @@ section {
   .modal .big-table {
     padding-left: 70px;
     padding-top: 40px;
-		padding-bottom: 25px; }
-		@media screen and (max-width: 640px) {
-			.modal .big-table {
-				padding-left: 0px;
-		}}
+    padding-bottom: 25px; }
   .modal .kinda-table {
     padding-top: 24px;
     padding-bottom: 24px;
@@ -235,30 +231,9 @@ section {
       display: -ms-flexbox;
       display: flex; }
     .modal .kinda-table span {
-			display: block; }
-		.modal .kinda-table span.spec-name {
-				width: 300px; }
-
-
-				@media screen and (max-width: 650px) {
-					.modal .kinda-table span.spec-name {
-					width: 230px; }
-					/* .big-property{
-						margin-left: 105px;
-					} */
-					.first-property{
-						margin-left: 0;
-					}
-				}
-				@media screen and (max-width: 640px) {
-					.big-property{
-						margin-left: 0px;
-					}
-
-				}
-
-
-
+      display: block; }
+      .modal .kinda-table span.spec-name {
+        width: 300px; }
   .modal .gallery-block .chose-color {
     font-weight: 600;
     line-height: 28px;
@@ -453,7 +428,7 @@ section {
   .modal.buy-modal {
     z-index: 16; }
     .modal.buy-modal .column {
-      width: 100%;
+      width: 90%;
       padding-left: 30px; }
       @media(max-width: 740px){
          .places-block {
@@ -580,9 +555,11 @@ section {
         display: flex;
         margin-top: -43px;
         margin-left: 35rem;
+				}
 
 
-         }
+
+
         .button-group button {
           width: 40px;
           height: 40px;
@@ -614,6 +591,14 @@ section {
         color: #FFFFFF;
         border-radius: 5px;
         margin-top: 70px; }
+
+				@media screen and (max-width: 460px) {
+				.modal .mini-section .small-column .btn {
+					width: 130px;}
+				.button-group {
+					margin-left: 235px;
+				}
+				}
 
         .invite-block {
           text-align: center;
@@ -886,12 +871,13 @@ section {
     margin-bottom: 20px;
     margin-right: 30px;
   }
-  }
+	}
+
   @media(max-width: 425px){
     .small-column a{
       z-index: 10;
      top: 165px;
-     right: 70px;
+     /* right: 70px; */
       position: absolute;
 
 
@@ -929,7 +915,17 @@ section {
   .button-group{
     margin-left: 360px;
     margin-top: -60px;
-  }
+	}
+	@media screen and (max-width: 550px){
+		.button-group{
+			margin-left: 280px;
+			}
+	}
+	@media screen and (max-width: 550px){
+	.button-group {
+		margin-left: 235px;
+	}
+}
 .modal-thanks img {
   max-width: 100%;
   max-height: 100%;
@@ -1914,7 +1910,7 @@ section {
     .eighth-section .text-block p {
       margin-top: 20px;
 			line-height: 1.8; }
-	/*////////////////////////////////////////*/
+
 	@media screen and (max-width: 640px) {
 	.eighth-section .text-block .white br {
 		display: none; }
@@ -2045,7 +2041,7 @@ section {
           left: auto;
           right: -22px;
           width: 21%; } }
-
+      /* } */
     .eighth-section footer .right-column {
       width: 35%;
       height: 10vh;
