--- a/dgm/assets/css/main.scss
+++ b/dgm/assets/css/main.scss
@@ -873,4 +873,30 @@ padding: 0;
 		}
 
 }
+.header_container{
+	height: 165px;
+	background-color:$unprimary;
+}
+.sidebar_content:before{
+	background-color: #1a2930;
+	content: "";
+	display: block;
+	width: 300px;
+	position: absolute;
+	top: -165px;
+	bottom: 0;
+	@media screen and (max-width: 725px){
+		display: none;
+	}
+}
+// .content_sidebar:after{
+// 	content:"";
+// 	background-color: $unprimary;
+// 	width: 300px;
+// 	height: 200%;
+// 	top: 165px;
+// 	left: 0;
+// 	position: absolute;
+// 	z-index: -10;
+// }
 
