--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -454,7 +454,7 @@ body {
 .block-05 {
   height: 950px;
   position: relative;
-  background: url("../img/block-05_bg.jpg") top center no-repeat;
+  background: url("../img/istockphoto-511266860-640x640.jpg") top center no-repeat;
   background-size: cover;
 }
 .block-05 .block-title {
