--- a/dgm/assets/css/_values.scss
+++ b/dgm/assets/css/_values.scss
@@ -9,3 +9,5 @@ $elektrait: 'ElektraTextPro_Italic', sans-serif;
 $verdana: 'Verdana', serif;
 $verdanabold:'Verdana_Bold', serif;
 $verdanait:'Verdana_Italic', serif;
+$proximathin:'Proxima_Nova_Thin';
+$proximareg:'Proxima_Nova_Regular';
